--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,11 @@ default: &default
 
 development:
   <<: *default
+  reconnect: true
   database: osouji_san_development
+  host: 127.0.0.1
+  poot: 3789
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +31,8 @@ development:
 test:
   <<: *default
   database: osouji_san_test
+  host: 127.0.0.1
+  poot: 3789
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
