--- a/config/database.yml
+++ b/config/database.yml
@@ -55,6 +55,8 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: osouji_san_production
   username: osouji_san
   password: <%= ENV['OSOUJI_SAN_DATABASE_PASSWORD'] %>
