--- a/config/database.yml
+++ b/config/database.yml
@@ -14,15 +14,16 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: root
   host: localhost
 
 development:
   <<: *default
+  sslverify: false
   reconnect: true
   database: osouji_san_development
   host: 127.0.0.1
-  poot: 3789
+  port: 3789
 
 
 # Warning: The database defined as "test" will be erased and
@@ -30,9 +31,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  sslverify: false
   database: osouji_san_test
   host: 127.0.0.1
-  poot: 3789
+  port: 3789
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
